tests/compile_fail/try_catch_exception_lifetime.stderr
error[E0597]: `scope4` does not live long enough
  --> tests/compile_fail/try_catch_exception_lifetime.rs:11:5
   |
9  |   let _exception = {
   |       ---------- borrow later stored here
10 |     v8::make_handle_scope!(scope3, &mut scope);
11 |     v8::make_handle_scope!(scope4, scope3);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     borrowed value does not live long enough
   |     binding `scope4` declared here
...
15 |   };
   |   - `scope4` dropped here while still borrowed
   |
   = note: this error originates in the macro `v8::make_handle_scope` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0597]: `scope3` does not live long enough
  --> tests/compile_fail/try_catch_exception_lifetime.rs:10:5
   |
9  |   let _exception = {
   |       ---------- borrow later stored here
10 |     v8::make_handle_scope!(scope3, &mut scope);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     borrowed value does not live long enough
   |     binding `scope3` declared here
...
15 |   };
   |   - `scope3` dropped here while still borrowed
   |
   = note: this error originates in the macro `v8::make_handle_scope` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0597]: `scope3` does not live long enough
  --> tests/compile_fail/try_catch_exception_lifetime.rs:10:5
   |
9  |   let _exception = {
   |       ---------- borrow later stored here
10 |     v8::make_handle_scope!(scope3, &mut scope);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     borrowed value does not live long enough
   |     binding `scope3` declared here
...
15 |   };
   |   - `scope3` dropped here while still borrowed
   |
   = note: this error originates in the macro `v8::make_handle_scope` (in Nightly builds, run with -Z macro-backtrace for more info)
